eda(crime): save processed crime data without any added features

--- a/notebooks/009_EDA_crime_incident_reports.ipynb
+++ b/notebooks/009_EDA_crime_incident_reports.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -571,8 +571,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17 s, sys: 1.21 s, total: 18.3 s\n",
-      "Wall time: 7.16 s\n"
+      "CPU times: user 17.2 s, sys: 328 ms, total: 17.5 s\n",
+      "Wall time: 6.4 s\n"
      ]
     }
    ],
@@ -727,8 +727,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 37.4 s, sys: 474 ms, total: 37.8 s\n",
-      "Wall time: 30.6 s\n"
+      "CPU times: user 37.8 s, sys: 471 ms, total: 38.3 s\n",
+      "Wall time: 31 s\n"
      ]
     }
    ],
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2246,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2422,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2456,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2552,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2561,7 +2561,7 @@
      "text": [
       "The full crime incident dataset has the following shape:\n",
       "\n",
-      "(162570, 53)\n",
+      "(365188, 53)\n",
       "\n",
       "The new crime incident dataset subsetted to include only records with coordinates and \"crime-type\" classes assigned to them has the following shape:\n",
       "\n",
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2610,8 +2610,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.11 s, sys: 3.9 ms, total: 3.11 s\n",
-      "Wall time: 3.11 s\n"
+      "CPU times: user 3.61 s, sys: 35.7 ms, total: 3.65 s\n",
+      "Wall time: 3.66 s\n"
      ]
     }
    ],
@@ -2649,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2687,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2770,7 +2770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2783,7 +2783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3067,7 +3067,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3079,7 +3079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3107,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3117,7 +3117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3127,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3348,7 +3348,7 @@
        "561    080100    1.104717e+07      1.879155e+06  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3356,6 +3356,22 @@
    "source": [
     "print(crime_df.info())\n",
     "crime_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save final crime data ready for adding additional features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime_df.to_csv(os.path.join(FEATURES_ROOT, 'crime-records-for-model-no-features-added.csv'), index=False)"
    ]
   },
   {
