--- a/notebooks/018_EDA_NOAA_weather_data.ipynb
+++ b/notebooks/018_EDA_NOAA_weather_data.ipynb
@@ -1041,11 +1041,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_noaa.to_csv(os.path.join(FEATURES_ROOT, 'boston-daily-weather-20140101-20190831.csv'))"
+    "df_noaa.to_csv(os.path.join(FEATURES_ROOT, 'boston-daily-weather-20140101-20190831.csv'), index=False)"
    ]
   },
   {
