eda(demo): fix demographics location values for clean merge

--- a/notebooks/015_EDA_neighborhood_demographics.ipynb
+++ b/notebooks/015_EDA_neighborhood_demographics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "2       66662.0  0.099621             73594.0  0.109980  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "9          0.201581        2023.0          0.115067      2531.0       0.143962  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "7          0.281202        2268.0          0.119994    1960.0       0.103698  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "2         170183.0                          0.647000  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "5           3609.0                             0.661  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
        "5                0.172041  1732.0         0.317332  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
        "5                     0.007052  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
        "2                 216627.0                            0.473903  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
        "5                   7135.0                            0.897710  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1563,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
        "2                           0.704843  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1962,7 @@
        "5                           0.839110  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1975,9 +1975,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combine dfs into a list to make final cleansing steps easier to complete\n",
+    "df_name_list = [\n",
+    "    'df_age_new',\n",
+    "    'df_housing_tenure_new',\n",
+    "    'df_hh_income_new',\n",
+    "    'df_poverty_rates_new',\n",
+    "    'df_educational_attainment_new',\n",
+    "    'df_school_enrollment_new'\n",
+    "] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove excess rows and strip trailing spaces from location names \n",
+    "for df_name in df_name_list:\n",
+    "    globals()[df_name] = globals()[df_name].copy().iloc[:-3, :]\n",
+    "    globals()[df_name]['Location'] = globals()[df_name]['Location'].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(23, 72)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2049,51 +2085,51 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Brighton</td>\n",
-       "      <td>51785.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>3271.0</td>\n",
-       "      <td>0.063165</td>\n",
-       "      <td>3244.0</td>\n",
-       "      <td>0.062644</td>\n",
-       "      <td>27399.0</td>\n",
-       "      <td>0.529091</td>\n",
-       "      <td>8337.0</td>\n",
+       "      <td>Back Bay</td>\n",
+       "      <td>18176.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>798.0</td>\n",
+       "      <td>0.043904</td>\n",
+       "      <td>1632.0</td>\n",
+       "      <td>0.089789</td>\n",
+       "      <td>7498.0</td>\n",
+       "      <td>0.412522</td>\n",
+       "      <td>3498.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>791.0</td>\n",
-       "      <td>0.051444</td>\n",
-       "      <td>950.0</td>\n",
-       "      <td>0.061785</td>\n",
-       "      <td>7140.0</td>\n",
-       "      <td>0.464360</td>\n",
-       "      <td>4950.0</td>\n",
-       "      <td>0.321930</td>\n",
-       "      <td>35071.0</td>\n",
-       "      <td>0.695205</td>\n",
+       "      <td>227.0</td>\n",
+       "      <td>0.050965</td>\n",
+       "      <td>171.0</td>\n",
+       "      <td>0.038392</td>\n",
+       "      <td>2321.0</td>\n",
+       "      <td>0.521105</td>\n",
+       "      <td>1293.0</td>\n",
+       "      <td>0.290301</td>\n",
+       "      <td>13366.0</td>\n",
+       "      <td>0.750056</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Charlestown</td>\n",
-       "      <td>18901.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>2424.0</td>\n",
-       "      <td>0.128247</td>\n",
-       "      <td>1196.0</td>\n",
-       "      <td>0.063277</td>\n",
-       "      <td>5738.0</td>\n",
-       "      <td>0.303582</td>\n",
-       "      <td>5315.0</td>\n",
+       "      <td>Beacon Hill</td>\n",
+       "      <td>9751.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>728.0</td>\n",
+       "      <td>0.074659</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>0.033022</td>\n",
+       "      <td>4758.0</td>\n",
+       "      <td>0.487950</td>\n",
+       "      <td>1826.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>557.0</td>\n",
-       "      <td>0.173035</td>\n",
-       "      <td>416.0</td>\n",
-       "      <td>0.129233</td>\n",
-       "      <td>552.0</td>\n",
-       "      <td>0.171482</td>\n",
-       "      <td>512.0</td>\n",
-       "      <td>0.159056</td>\n",
-       "      <td>14683.0</td>\n",
-       "      <td>0.820188</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0.044548</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>0.047207</td>\n",
+       "      <td>503.0</td>\n",
+       "      <td>0.334441</td>\n",
+       "      <td>459.0</td>\n",
+       "      <td>0.305186</td>\n",
+       "      <td>7844.0</td>\n",
+       "      <td>0.839110</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2103,48 +2139,48 @@
       "text/plain": [
        "      Location  Total-Population_x  Median-Age  0:9-Years  0:9-Percentage  \\\n",
        "0      Allston             19363.0        26.0      550.0        0.028405   \n",
-       "1     Brighton             51785.0        29.0     3271.0        0.063165   \n",
-       "2  Charlestown             18901.0        35.0     2424.0        0.128247   \n",
+       "1     Back Bay             18176.0        33.0      798.0        0.043904   \n",
+       "2  Beacon Hill              9751.0        32.0      728.0        0.074659   \n",
        "\n",
        "   10:19-Years  10:19-Percentage  20:34-Years  20:34-Percentage  35:54-Years  \\\n",
        "0       2691.0          0.138976      13084.0          0.675722       1711.0   \n",
-       "1       3244.0          0.062644      27399.0          0.529091       8337.0   \n",
-       "2       1196.0          0.063277       5738.0          0.303582       5315.0   \n",
+       "1       1632.0          0.089789       7498.0          0.412522       3498.0   \n",
+       "2        322.0          0.033022       4758.0          0.487950       1826.0   \n",
        "\n",
        "   ...  Enrolled-Grade-5:8  Enrolled-Grade-5:8-Percentage  \\\n",
        "0  ...               162.0                       0.014313   \n",
-       "1  ...               791.0                       0.051444   \n",
-       "2  ...               557.0                       0.173035   \n",
+       "1  ...               227.0                       0.050965   \n",
+       "2  ...                67.0                       0.044548   \n",
        "\n",
        "   Enrolled-Grade-9:12  Enrolled-Grade-9:12-Percentage  \\\n",
        "0                 77.0                        0.006803   \n",
-       "1                950.0                        0.061785   \n",
-       "2                416.0                        0.129233   \n",
+       "1                171.0                        0.038392   \n",
+       "2                 71.0                        0.047207   \n",
        "\n",
        "   Enrolled-College-Undergraduate  Enrolled-College-Undergraduate-Percentage  \\\n",
        "0                          6630.0                                   0.585793   \n",
-       "1                          7140.0                                   0.464360   \n",
-       "2                           552.0                                   0.171482   \n",
+       "1                          2321.0                                   0.521105   \n",
+       "2                           503.0                                   0.334441   \n",
        "\n",
        "   Graduate-Or-Professional-School  \\\n",
        "0                           4106.0   \n",
-       "1                           4950.0   \n",
-       "2                            512.0   \n",
+       "1                           1293.0   \n",
+       "2                            459.0   \n",
        "\n",
        "   Graduate-Or-Professional-School-Percentage  Not-Enrolled-In-School  \\\n",
        "0                                    0.362785                  7856.0   \n",
-       "1                                    0.321930                 35071.0   \n",
-       "2                                    0.159056                 14683.0   \n",
+       "1                                    0.290301                 13366.0   \n",
+       "2                                    0.305186                  7844.0   \n",
        "\n",
        "   Not-Enrolled-In-School-Percentage  \n",
        "0                           0.409721  \n",
-       "1                           0.695205  \n",
-       "2                           0.820188  \n",
+       "1                           0.750056  \n",
+       "2                           0.839110  \n",
        "\n",
        "[3 rows x 72 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2160,19 +2196,26 @@
     "df_master_demo4 = pd.merge(df_master_demo3, df_educational_attainment_new, on='Location')\n",
     "df_master_demo_final = pd.merge(df_master_demo4, df_school_enrollment_new, on='Location')\n",
     "\n",
-    "\n",
+    "print(df_master_demo_final.shape)\n",
     "df_master_demo_final.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Save df_master_demo_final to file\n",
     "df_master_demo_final.to_csv('../data/interim/demographics_master_neighborhood.csv', sep=',')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
