eda(train): minor edits to working draft

--- a/notebooks/023_EDA_training_data.ipynb
+++ b/notebooks/023_EDA_training_data.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,8 @@
     "plt.grid(':', alpha=0.4)\n",
     "plt.legend(edgecolor='k', fontsize=12)\n",
     "plt.tight_layout()\n",
-    "if save\n",
+    "if savefig:\n",
+    "    plt.savefig(os.path.join(FIGURES_ROOT, 'pca-cum-variance-explained.png'))\n",
     "plt.show();"
    ]
   },
