eda(train): update features list in nb intro

--- a/notebooks/023_EDA_training_data.ipynb
+++ b/notebooks/023_EDA_training_data.ipynb
@@ -14,13 +14,15 @@
     "\n",
     "Features examined in this EDA include:\n",
     "\n",
+    "       'streetlights-night', 'lat', 'lon', 'night', 'tempavg', 'windavg', 'precip', 'snowfall',\n",
+    "       'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday',\n",
+    "       'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec',\n",
+    "       'college-near', 'highschool-near', 'median-age', 'median-income', 'poverty-rate',\n",
+    "       'less-than-high-school-perc', 'bachelor-degree-or-more-perc', 'enrolled-college-perc',\n",
     "       'commercial-mix-ratio', 'industrial-mix-ratio', 'owner-occupied-ratio',\n",
-    "       'residential-median-value', 'residential-gini-coef',\n",
-    "       'industrial-mix-ratio-3yr-cagr', 'commercial-mix-ratio-3yr-cagr',\n",
-    "       'owner-occupied-ratio-3yr-cagr', 'residential-median-value-3yr-cagr',\n",
-    "       'residential-gini-coef-3yr-cagr', 'Tuesday', 'Wednesday', 'Thursday',\n",
-    "       'Friday', 'Saturday', 'Sunday', 'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
-    "       'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec', 'night'\n"
+    "       'residential-median-value', 'residential-gini-coef', 'commercial-mix-ratio-3yr-cagr',\n",
+    "       'industrial-mix-ratio-3yr-cagr', 'owner-occupied-ratio-3yr-cagr',\n",
+    "       'residential-gini-coef-3yr-cagr', 'residential-median-value-3yr-cagr'"
    ]
   },
   {
